fix(notes): Scroll for horizontal code overflow

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,7 +18,7 @@
   }
 
   pre {
-    @apply text-xs p-2 border rounded-sm dark:border-white border-black;
+    @apply text-xs p-2 border rounded-sm dark:border-white border-black overflow-x-scroll;
   }
 }
 
